# netupi

./: Cargo.toml  README.md
scripts/: build_win_x64.sh
src/: activity_log.rs  app_model.rs  common.rs  constants.rs  db.rs  editable_label.rs  icalendar.rs  lib.rs  main.rs  maybe.rs  task.rs  task_details.rs  task_list.rs  time.rs  utils.rs  widgets.rs
