[package]
name = "time-tracker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features=['im']}
# ical = "0.6.*"
ical = { git = "https://github.com/migmedia/ical-rs", features=['ical', 'generator'] }
uuid = { version = "0.8", features = ["v1"] }
chrono = { version = "0.4" }
# [dependencies.ical]
# version = "0.6.*"
# default-features = false
# features = ["ical", "vcard"]
