[package]
name = "netupi"
version = "0.6.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", features=['im']}
ical = { git = "https://github.com/migmedia/ical-rs", features=['ical', 'generator'] }
uuid = { version = "0.8", features = ["v1"] }
chrono = { version = "0.4" }
rodio = { version = "0.14" }
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
dirs = "4.0"

[dependencies.rusqlite]
version = "0.26.0"
features = ["bundled"]

# [dependencies.ical]
# version = "0.6.*"
# default-features = false
# features = ["ical", "vcard"]
